--- a/css/styles.css
+++ b/css/styles.css
@@ -101,22 +101,31 @@ body {
 }
 
 
-.menu-link {
-    position: relative;
+.menu-page {
+    position:relative;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
+    font-family: Roboto;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    text-align: left;
+    color: #2E2F42;
+    padding: 24px 0;
+    display: block;
 }
 
-.menu-link:hover::after,
-.menu-link:focus::after {
+.menu-page:hover::after, 
+.menu-page:focus::after {
     position:absolute;
     content: "";
-    width: 48px;
+    width: 100px;
     height: 4px;
     left: 0;
     bottom: -1px;
     border-radius: 2px;
     background: #404bbf;
+    color: #404bbf;
     }
 
     .menu-link:hover,  
