--- a/css/styles.css
+++ b/css/styles.css
@@ -115,7 +115,6 @@ body {
     content: "";
     width: 100px;
     height: 4px;
-    left: 0;
     bottom: -1px;
     border-radius: 2px;
     background-color: #404bbf;
@@ -185,6 +184,22 @@ body {
 .address-list {
     display: flex;
     gap: 40px                       ;
+}
+
+.address-made-item {
+    display: flex;
+    align-items: center;
+    font-weight: 400;
+    line-height: 1.5em;
+    letter-spacing: 0.02em;
+    color: var(--primary-text-color);
+    text-decoration: none;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.address-made-item:hover,
+.address-made-item:focus {
+    color: var(--hover-color);
 }
 
 /*<!-- HERO SECTION 1-->*/
