--- a/css/styles.css
+++ b/css/styles.css
@@ -482,9 +482,39 @@ background: var(--CLOUD, #F4F4FD);
 
 .app {
     padding: 32px 16px;
-    border: 1px solid #e7e9fc;
+    border-right: 1px solid #e7e9fc;
+    border-left: 1px solid #e7e9fc;
     border-top: none;
         }
+
+        .portfolio-portfolio {
+            position: relative;
+            overflow: hidden;
+        }
+
+.portfolio-text {
+    position: absolute;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    padding: 40px 32px;
+    background-color: #4d5ae5;
+    height: 100%;
+    width: 100%;
+    transform: translate(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    color: #F4F4FD;
+}
+
+.portfolio-list-item:hover .portfolio-text,
+.portfolio-list-item:focus .portfolio-text {
+    transform: translate(0%);
+
+}
 
     /*<!--PAGE FOOTER-->*/
 .footer-block {
