--- a/css/styles.css
+++ b/css/styles.css
@@ -391,28 +391,20 @@ background: var(--CLOUD, #F4F4FD);
     
 }
 
-
-
 .workers-positions {
-        font-size: 16px;
-    font-weight: 400;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    text-align: center;
-    color: #434455;
+    font-size: 16px;
+font-weight: 400;
+line-height: 1.5;
+letter-spacing: 0.02em;
+text-align: center;
+color: #434455;
 }
-.workers-button-list-icon {
-    display: flex;
-    flex-direction: row;
-    list-style-type: none;
-    justify-content: center;
-    gap: 24px;
-    background-color: #4D5AE5;
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    align-items: center;
-    justify-content: center;
+
+.workers-button {
+display: flex;
+column-gap: 24px;
+justify-content: center;
+align-items: center;
 }
 
 .button-liton-liton {
@@ -420,7 +412,24 @@ background: var(--CLOUD, #F4F4FD);
     align-items: center;
     justify-content: center;
     width: 16px;
+    }
+
+.workers-button-list-icon {
+display: flex;
+flex-direction: row;
+list-style-type: none;
+justify-content: center;
+gap: 24px;
+background-color: #4D5AE5;
+width: 40px;
+height: 40px;
+border-radius: 50%;
+align-items: center;
+justify-content: center;
 }
+
+
+
 
 
 /*<!--PAGE PORTFOLIO 4-->*/
@@ -490,21 +499,21 @@ background: var(--CLOUD, #F4F4FD);
         .portfolio-portfolio {
             position: relative;
             overflow: hidden;
+           
         }
 
 .portfolio-text {
     position: absolute;
+    display: block;
     font-size: 16px;
+    font-size: 400;
     line-height: 1.5;
     letter-spacing: 0.02em;
     width: 100%;
     height: 100%;
     top: 0;
-    left: 0;
     padding: 40px 32px;
     background-color: #4d5ae5;
-    height: 100%;
-    width: 100%;
     transform: translate(100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     color: #F4F4FD;
