--- a/css/styles.css
+++ b/css/styles.css
@@ -585,12 +585,11 @@ justify-content: center;
 
 
 .footer-paragraph-paragraf {
-    display: flex;
 font-size: 16px;
 font-weight: 500;
 line-height: 1.5;
 letter-spacing: 0.02em;
-
+margin-bottom: 16px;
 text-align: center;
 color: #FFFFFF;
 }
@@ -598,16 +597,24 @@ color: #FFFFFF;
 .workers-button {
     display: flex;
 gap: 16px;
-margin-top: 16px;
 }
 
 .workers-button-list-icon {
-    display: flex;
-    border-radius: 50%;
-    background-color: #4D5AE5;
+   transition: cubic-bezier(0.4, 0, 0.2, 1);
     width: 40px;
     height: 40px;
+}
+
+.button-liton-liton {
+    width: 100%;
+    height: 100%;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center; 
     
+
 }
 
 
