--- a/css/styles.css
+++ b/css/styles.css
@@ -58,6 +58,7 @@ body {
     padding-left: 15px;
     padding-right: 15px;
     padding-bottom: 24px;
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08); 
     }
 
 .page-header-container {
@@ -99,7 +100,6 @@ body {
     margin-right: 40px;
 
 }
-
 
 .studio {
     display: flex;
@@ -214,6 +214,7 @@ body {
     text-align: center;
     max-width: 1440px;
     margin: 0 auto; 
+    background-image: linear-gradient rgba(46, 47, 66, 0.7);
 }
   
 .main-head {
@@ -269,7 +270,8 @@ margin-top: 48px;
        border-radius: 4px;
     margin-left: auto;
     margin-right: auto;
-    border: none;   
+    border: none;
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);   
 }
     
   /*<!--OUR BENEFITS 2-->*/
@@ -290,14 +292,27 @@ margin-top: 48px;
     clip-path: inset(100%);
     clip: rect(0 0 0 0);
     overflow: hidden;
-}   
+} 
+.made-menu {
+    display: flex;
+    gap: 24px;
+
+    
+}
+
+.made-menu-item {
+        background-color: #FFFFFF;
+        width: calc((100% - 72px) / 4); 
+}  
   .icon-container {
+    align-items: center; 
+    justify-content: center;
     width: 264px;
 height: 112px;
 flex-shrink: 0;
 border-radius: 4px;
-border: 1px solid var(--LIGHT-SLATE, #8e8f99);
-background: var(--CLOUD, #F4F4FD);
+border: 1px solid #8e8f99;
+background: #F4F4FD;
   }
 
 .icon{
@@ -311,16 +326,7 @@ background: var(--CLOUD, #F4F4FD);
 
 
 
-.made-menu {
-    display: flex;
-    gap: 24px;
-    
-}
 
-.made-menu-item {
-        background-color: #FFFFFF;
-        width: calc((100% - 72px) / 4); 
-}
 
 .made-menu-item-name {
     background-color: #FFFFFF;
