--- a/css/styles.css
+++ b/css/styles.css
@@ -296,24 +296,24 @@ margin-top: 48px;
 .made-menu {
     display: flex;
     gap: 24px;
-
-    
 }
 
 .made-menu-item {
-        background-color: #FFFFFF;
-        width: calc((100% - 72px) / 4); 
-}  
-  .icon-container {
+    background-color: #FFFFFF;
+    width: calc((100% - 72px) / 4); 
+} 
+
+.icon-container {
+    width: 264px;
+    height: 112px;
+    flex-shrink: 0;
+    border-radius: 4px;
+    margin-bottom: 8px; 
+    border: 1px solid #8e8f99;
+    background: #F4F4FD;
     align-items: center; 
     justify-content: center;
-    width: 264px;
-height: 112px;
-flex-shrink: 0;
-border-radius: 4px;
-border: 1px solid #8e8f99;
-background: #F4F4FD;
-  }
+}
 
 .icon{
     width: 64px;
