--- a/css/styles.css
+++ b/css/styles.css
@@ -418,6 +418,7 @@ align-items: center;
     align-items: center;
     justify-content: center;
     width: 16px;
+    background-color: #404bbf; 
     }
 
 .workers-button-list-icon {
@@ -427,11 +428,13 @@ list-style-type: none;
 justify-content: center;
 gap: 24px;
 background-color: #4D5AE5;
+fill: var(--IRIS, #4D5AE5);;
 width: 40px;
 height: 40px;
 border-radius: 50%;
 align-items: center;
 justify-content: center;
+
 }
 
 
