--- a/css/styles.css
+++ b/css/styles.css
@@ -437,10 +437,6 @@ justify-content: center;
 
 }
 
-
-
-
-
 /*<!--PAGE PORTFOLIO 4-->*/
 .portfolio {
     padding: 120px 0 120px 0;
@@ -535,9 +531,19 @@ justify-content: center;
 }
 
     /*<!--PAGE FOOTER-->*/
+
+    .footer-conteinet {
+        display: flex;
+        align-items: baseline;
+}
+  
+.container-footer {
+    margin-right: 120px;
+}
+
 .footer-block {
     background-color: #2e2f42;
-    padding: 100px 0
+    padding: 100px 0;
 
 }
 .footer-span {
@@ -554,7 +560,6 @@ justify-content: center;
     text-align: left;
     color: #4D5AE5;
     text-transform: uppercase;
-    
 }
 
 .footer-span {
@@ -566,7 +571,6 @@ justify-content: center;
     color: #F4F4FD;
     text-transform: uppercase;
     background-color: #2e2f42;
-
 }
 
 .footer-paragraph {
@@ -578,7 +582,6 @@ justify-content: center;
     text-align: left;
     background-color: #2e2f42;
     color: #F4F4FD;
-    
 }
 
 .footer-block .footer-span {
@@ -591,25 +594,23 @@ justify-content: center;
     margin-bottom: 16px;
 }
 
-
-
 .footer-paragraph-paragraf {
-font-size: 16px;
-font-weight: 500;
-line-height: 1.5;
-letter-spacing: 0.02em;
-margin-bottom: 16px;
-text-align: center;
-color: #FFFFFF;
+    color: var(--WHITE, #FFF);
+    font-family: Roboto;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 24px; 
+    letter-spacing: 0.32px;
 }
 
 .workers-button {
     display: flex;
-gap: 16px;
+    gap: 16px;
 }
 
 .workers-button-list-icon {
-   transition: cubic-bezier(0.4, 0, 0.2, 1);
+    transition: cubic-bezier(0.4, 0, 0.2, 1);
     width: 40px;
     height: 40px;
 }
@@ -622,8 +623,6 @@ gap: 16px;
     display: flex;
     align-items: center;
     justify-content: center; 
-    
-
 }
 
 
