--- a/css/styles.css
+++ b/css/styles.css
@@ -140,24 +140,36 @@ body {
 }
 
 .menu-link  {
-    font-family: Roboto;
+    display: block;
+    padding-top: 24px;
+    padding-bottom: 24px;
     font-size: 16px;
     font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    text-align: left;
     color: #2E2F42;
-    padding: 24px 0;
-    display: block;
-    
 }
-.menu-link:hover {
+.menu-link:hover, 
+.menu-link:focus {
     color: #404bbf;
 }
-.menu-link:focus  {
-       color: #404bbf;
-     
-   }
+
+.current-page {
+    position: relative;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    color: #404BBF;
+}
+
+.current-page::after {
+    position: absolute;
+    bottom: -1px;
+    left: 0;
+    width: 48px;
+    border-radius: 2px;
+    background-color: #404BBF;
+    content: '';
+}
+
 .menu-contakt {    
     font-weight: 400;
     font-size: 16px;
