--- a/css/styles.css
+++ b/css/styles.css
@@ -403,6 +403,7 @@ margin-top: 48px;
 
 .workers-person {
     background-color: #FFFFFF;
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08); 
     border-radius: 0px 0px 4px 4px;
     width: calc((100% - 72px) / 4);
     flex-wrap: wrap;
@@ -425,14 +426,6 @@ justify-content: center;
 align-items: center;
 }
 
-.button-liton-liton {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 16px;
-    background-color: #404bbf; 
-    }
-
 .workers-button-list-icon {
 display: flex;
 flex-direction: row;
@@ -446,8 +439,19 @@ height: 40px;
 border-radius: 50%;
 align-items: center;
 justify-content: center;
-
+transition: cubic-bezier(0.4, 0, 0.2, 1);
 }
+.button-liton-liton {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 16px;
+    background-color: #404bbf; 
+    }
+.workers-button-icon {
+    fill: #F4F4FD;
+}
+
 
 /*<!--PAGE PORTFOLIO 4-->*/
 .portfolio {
