--- a/css/styles.css
+++ b/css/styles.css
@@ -90,7 +90,7 @@ body {
     line-height: 1.17;
     letter-spacing: 0.54px;
     text-transform: uppercase;
-    color: #4d5ae5;
+    color: #404bbf;
     margin-right: 76px;
     
 }
@@ -104,7 +104,7 @@ body {
 .studio {
     display: flex;
     position:relative;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
     color: #2E2F42;
     display: block;
 }
@@ -175,6 +175,9 @@ body {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.32px;
+
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
     color: #434455;
 }
 .menu-contakt:hover {
@@ -283,7 +286,7 @@ margin-top: 48px;
     margin-left: auto;
     margin-right: auto;
     border: none;
-    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);   
+    background-color: 250ms cubic-bezier(0.4, 0, 0.2, 1);   
 }
     
   /*<!--OUR BENEFITS 2-->*/
