--- a/css/styles.css
+++ b/css/styles.css
@@ -126,6 +126,9 @@ body {
     color: #404bbf;
 }
 
+.menu-link studio {
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1)
+}
 
 .menu-link-link  {
     font-family: Roboto;
@@ -230,6 +233,7 @@ body {
     max-width: 1440px;
     margin: 0 auto; 
     background-image: linear-gradient rgba(46, 47, 66, 0.7);
+    
 }
   
 .main-head {
