--- a/css/styles.css
+++ b/css/styles.css
@@ -225,14 +225,16 @@ body {
 .section {
     background: #2e2f42;
     padding: 188px 0 188px;
-    background-image: url(../images/people-office.jpg);
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7),
+     rgba(46, 47, 66, 0.7)), url(../images/people-office.jpg);
+    
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
     text-align: center;
     max-width: 1440px;
     margin: 0 auto; 
-    background-image: linear-gradient rgba(46, 47, 66, 0.7);
+    ;
     
 }
   
@@ -290,7 +292,7 @@ margin-top: 48px;
     margin-left: auto;
     margin-right: auto;
     border: none;
-    background-color: 250ms cubic-bezier(0.4, 0, 0.2, 1);   
+    linear-gradient rgba(46, 47, 66, 0.7)  
 }
     
   /*<!--OUR BENEFITS 2-->*/
@@ -299,6 +301,7 @@ margin-top: 48px;
     padding-top: 120px;
     padding-bottom: 120px;
    }
+
 .visually-hidden {
     
     position: absolute;
@@ -323,6 +326,7 @@ margin-top: 48px;
 } 
 
 .icon-container {
+    display: flex; 
     width: 264px;
     height: 112px;
     flex-shrink: 0;
@@ -335,8 +339,7 @@ margin-top: 48px;
 }
 
 .icon{
-    width: 64px;
-    height: 64px;
+    
     flex-shrink: 0;
     height: #4d5ae5, #2e2f42;
     margin-left: 100px;
