--- a/css/styles.css
+++ b/css/styles.css
@@ -292,7 +292,7 @@ margin-top: 48px;
     margin-left: auto;
     margin-right: auto;
     border: none;
-    linear-gradient rgba(46, 47, 66, 0.7)  
+    
 }
     
   /*<!--OUR BENEFITS 2-->*/
@@ -449,14 +449,16 @@ height: 40px;
 border-radius: 50%;
 align-items: center;
 justify-content: center;
-transition: cubic-bezier(0.4, 0, 0.2, 1);
+transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .button-liton-liton {
     display: flex;
     align-items: center;
     justify-content: center;
     width: 16px;
-    background-color: #404bbf; 
+    background-color: #404bbf;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+     
     }
 .workers-button-icon {
     fill: #F4F4FD;
@@ -621,9 +623,9 @@ transition: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-paragraph-paragraf {
-    color: var(--WHITE, #FFF);
+    color: var(--WHITE, #FFFFFF);
     font-family: Roboto;
-    font-size: 16px;
+    font-size: 18px;
     font-style: normal;
     font-weight: 500;
     line-height: 24px; 
