--- a/css/styles.css
+++ b/css/styles.css
@@ -126,8 +126,12 @@ body {
     color: #404bbf;
 }
 
+.made-item {
+    transition color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+}
+
 .menu-link studio {
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1)
+   color: #404bbf;
 }
 
 .menu-link-link  {
