--- a/css/styles.css
+++ b/css/styles.css
@@ -127,8 +127,8 @@ body {
 }
 
 .made-item {
-    transition color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
-}
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+} 
 
 .menu-link studio {
    color: #404bbf;
