--- a/css/styles.css
+++ b/css/styles.css
@@ -628,11 +628,12 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 .footer-paragraph-paragraf {
     font-family: Roboto;
-    font-size: 18px;
+    font-size: 16px;
     font-style: normal;
     font-weight: 500;
-    line-height: 24px; 
-    letter-spacing: 0.32px;
+    line-height: 1.5; 
+    letter-spacing: 0.02em;
+    margin-bottom: 16px;
     color: #FFFFFF;
 }
 
@@ -657,5 +658,8 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     justify-content: center; 
 }
 
+.button-liton-liton:hover,
+.button-liton-liton:focus {
+    background-color #31d0aa;
+}
 
-    
