--- a/css/styles.css
+++ b/css/styles.css
@@ -118,7 +118,7 @@ body {
     bottom: -1px;
     border-radius: 2px;
     background-color: #404bbf;
-    color: #404bbf;
+    
     }
 
     .menu-link:hover,  
@@ -413,11 +413,12 @@ margin-top: 48px;
     justify-content: flex-start;
     gap: 24px;                      
     padding: 32px 0;
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08); 
 }
 
 .workers-person {
     background-color: #FFFFFF;
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08); 
+    
     border-radius: 0px 0px 4px 4px;
     width: calc((100% - 72px) / 4);
     flex-wrap: wrap;
@@ -660,6 +661,6 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 .button-liton-liton:hover,
 .button-liton-liton:focus {
-    background-color #31d0aa;
+    background-color: #31d0aa;
 }
 
