--- a/css/styles.css
+++ b/css/styles.css
@@ -265,6 +265,7 @@ body {
     letter-spacing: 0.04em;
     color: #FFFFFF;
     cursor: pointer;
+    background-color: 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 
 .button-action:hover {
@@ -380,6 +381,23 @@ margin-top: 48px;
 
 /*<!--INGREDIENTS SECTION 3-->*/
 
+.workers-menu {
+    display: flex;
+    justify-content: flex-start;
+    gap: 24px;                      
+    padding: 32px 0;
+    
+}
+
+.workers-person {
+    background-color: #FFFFFF;
+    
+    border-radius: 0px 0px 4px 4px;
+    width: calc((100% - 72px) / 4);
+    flex-wrap: wrap;
+    
+}
+
 .workers-app {
     
     padding-top: 32px;
@@ -408,22 +426,7 @@ margin-top: 48px;
     margin-bottom: 72px;
 }
 
-.workers-menu {
-    display: flex;
-    justify-content: flex-start;
-    gap: 24px;                      
-    padding: 32px 0;
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08); 
-}
 
-.workers-person {
-    background-color: #FFFFFF;
-    
-    border-radius: 0px 0px 4px 4px;
-    width: calc((100% - 72px) / 4);
-    flex-wrap: wrap;
-    
-}
 
 .workers-positions {
     font-size: 16px;
@@ -436,7 +439,7 @@ color: #434455;
 
 .workers-button {
 display: flex;
-column-gap: 24px;
+column-gap: 18px;
 justify-content: center;
 align-items: center;
 }
@@ -448,7 +451,7 @@ list-style-type: none;
 justify-content: center;
 gap: 24px;
 background-color: #4D5AE5;
-fill: var(--IRIS, #4D5AE5);;
+fill: #4D5AE5;
 width: 40px;
 height: 40px;
 border-radius: 50%;
