--- a/css/styles.css
+++ b/css/styles.css
@@ -256,27 +256,36 @@ body {
     display: block;  margin: 0 auto;
    }
   
-.button-action {
-    
+   .button-action {
+    background-color: #4D5AE5;
     font-family: "Roboto", sans-serif ;
     font-size: 16px;
     font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.04em;
-    background-color: #4D5AE5;
     color: #FFFFFF;
     cursor: pointer;
-    background-color: 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+   
+}
+.button-action {
     min-width: 169px;
     height: 56px;
-   margin-top: 48px;
+    color: #ffffff;
+    background-color: #4D5AE5;
+cursor: pointer;
+font-weight: 500;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.04em;
+margin-top: 48px;
     display: block;
        border-radius: 4px;
     margin-left: auto;
     margin-right: auto;
     border: none;
-    
+    background-color: 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
+
 .button-action:hover {
     background-color: #404BBF;
 }
