--- a/css/styles.css
+++ b/css/styles.css
@@ -168,7 +168,7 @@ address {
     width: 48px;
     border-radius: 2px;
     background-color: #404BBF;
-    content: '';
+    content: "";
 }
 
 .menu-contakt {    
