--- a/css/styles.css
+++ b/css/styles.css
@@ -58,12 +58,10 @@ address {
     padding-left: 15px;
     padding-right: 15px;
     padding-bottom: 24px;
-    
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08); 
     }
 
-    .container page-header-container {
-        box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08);    
-    }
+   
 .page-header-container {
     display: flex;
     justify-content: space-between;
@@ -102,10 +100,19 @@ address {
 
 }
 
+
+.made-item {
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+} 
+
+.menu-link studio {
+    color: #404bbf;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1)
+}
 .studio {
     display: flex;
     position:relative;
-    color: #E7E9FC;
+    color: #404BBF;
     display: block;
     
 }
@@ -120,14 +127,6 @@ address {
     border-radius: 2px;
     background-color: #404bbf;
 }
-.made-item {
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
-} 
-
-.menu-link studio {
-    color: #404bbf;
-}
-
 .menu-link-link  {
     font-family: Roboto;
     font-size: 16px;
@@ -285,7 +284,7 @@ address {
     margin-left: auto;
     margin-right: auto;
     border: none;
-    background-color: 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+    transition background-color: 250ms cubic-bezier(0.4, 0, 0.2, 1);  
 }
 
 /*<!--OUR BENEFITS 2-->*/
