--- a/css/styles.css
+++ b/css/styles.css
@@ -58,7 +58,7 @@ address {
     padding-left: 15px;
     padding-right: 15px;
     padding-bottom: 24px;
-    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08); 
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08); 
     }
 
    
@@ -258,7 +258,7 @@ address {
     letter-spacing: 0.04em;
     color: #FFFFFF;
     cursor: pointer;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);  
 }
 
 .button-action:hover {
@@ -284,7 +284,7 @@ address {
     margin-left: auto;
     margin-right: auto;
     border: none;
-    transition background-color: 250ms cubic-bezier(0.4, 0, 0.2, 1);  
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);  
 }
 
 /*<!--OUR BENEFITS 2-->*/
@@ -370,7 +370,7 @@ address {
 
 .workers-person {
     background-color: #FFFFFF;
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08); 
     border-radius: 0px 0px 4px 4px;
     width: calc((100% - 72px) / 4);
  
@@ -404,7 +404,7 @@ address {
 }
 
 .workers-positions {
-    font-size: 16px;
+    font-size: 24px;
     font-weight: 400;
     line-height: 1.5;
     letter-spacing: 0.02em;
@@ -452,6 +452,7 @@ address {
 
 .portfolio {
     padding: 120px 0 120px 0;
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08); 
 }
 
 .portfolio-images-title {
