--- a/css/styles.css
+++ b/css/styles.css
@@ -544,6 +544,7 @@ address {
 .footer-conteinet {
     display: flex;
     align-items: baseline;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
   
 .container-footer {
