--- a/css/styles.css
+++ b/css/styles.css
@@ -617,6 +617,7 @@ address {
 .workers-button {
     display: flex;
     gap: 16px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .workers-button-list-icon {
