--- a/css/styles.css
+++ b/css/styles.css
@@ -102,17 +102,17 @@ address {
 
 
 .made-item {
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1)  
 } 
 
 .menu-link studio {
     color: #404bbf;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1)
+   
 }
 .studio {
     display: flex;
     position:relative;
-    color: #404BBF;
+    background: #404BBF;
     display: block;
     
 }
@@ -148,6 +148,7 @@ address {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #2E2F42;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1)
 }
 .menu-link:hover, 
 .menu-link:focus {
