--- a/css/styles.css
+++ b/css/styles.css
@@ -513,6 +513,7 @@ address {
     border-right: 1px solid #e7e9fc;
     border-left: 1px solid #e7e9fc;
     border-top: none;
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08); 
 }
 
 .portfolio-portfolio {
