--- a/css/styles.css
+++ b/css/styles.css
@@ -134,11 +134,9 @@ address {
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
     .studio {
-        
         position:relative;
         color: #404BBF;
-        
-        
+             
     }
     
     .studio::after {
@@ -427,7 +425,7 @@ address {
     flex-direction: row;
     list-style-type: none;
     justify-content: center;
-    column-gap: 24px;
+    gap: 24px;
     background-color: #4D5AE5;
     fill: #4D5AE5;
     width: 40px;
@@ -443,7 +441,7 @@ address {
     align-items: center;
     justify-content: center;
     width: 16px;
-    background: #404BBF;
+    background-color: #404BBF;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
