--- a/css/styles.css
+++ b/css/styles.css
@@ -434,6 +434,7 @@ address {
     align-items: center;
     justify-content: center;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
 }
 
 .button-liton-liton {
@@ -537,6 +538,8 @@ address {
     transform: translate(100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     color: #F4F4FD;
+
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 
 .portfolio-list-item:hover .portfolio-text,
