--- a/css/styles.css
+++ b/css/styles.css
@@ -434,7 +434,11 @@ address {
     align-items: center;
     justify-content: center;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    
+}
+
+.workers-button-list-icon:hover,
+.workers-button-list-icon:focus {
+    background-color: #404bbf; 
 }
 
 .button-liton-liton {
@@ -539,7 +543,7 @@ address {
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     color: #F4F4FD;
 
-    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+     
 }
 
 .portfolio-list-item:hover .portfolio-text,
