--- a/css/styles.css
+++ b/css/styles.css
@@ -539,9 +539,9 @@ address {
     top: 0;
     padding: 40px 32px;
     background-color: #4d5ae5;
-    transform: translate(100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     color: #F4F4FD;
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 
      
 }
