--- a/css/styles.css
+++ b/css/styles.css
@@ -374,8 +374,6 @@ address {
     border-radius: 0px 0px 4px 4px;
     width: calc((100% - 72px) / 4);
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08); 
- 
-    
 }
 
 .workers-app {
@@ -426,7 +424,7 @@ address {
     list-style-type: none;
     justify-content: center;
     gap: 24px;
-    background-color: #4D5AE5;
+    background-color: #404bbf;
     fill: #4D5AE5;
     width: 40px;
     height: 40px;
@@ -479,7 +477,6 @@ address {
     gap: 24px;
     row-gap: 48px;
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08); 
-    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-caption {
