--- a/css/styles.css
+++ b/css/styles.css
@@ -424,7 +424,7 @@ address {
     list-style-type: none;
     justify-content: center;
     gap: 24px;
-    background-color: #404bbf;
+    background-color: #4D5AE5;
     fill: #4D5AE5;
     width: 40px;
     height: 40px;
