--- a/css/styles.css
+++ b/css/styles.css
@@ -633,7 +633,7 @@ address {
     
 }
 
-.button-liton-liton {
+.button-button-liton-liton {
     width: 100%;
     height: 100%;
     background-color: #4d5ae5;
@@ -644,8 +644,8 @@ address {
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);  
 }
 
-.button-liton-liton:hover,
-.button-liton-liton:focus {
+.button-button-liton-liton:hover,
+.button-button-liton-liton:focus {
     background-color: #31d0aa;
 }
 
