--- a/css/styles.css
+++ b/css/styles.css
@@ -644,8 +644,8 @@ address {
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);  
 }
 
-.button-button-liton-liton:hover,
-.button-button-liton-liton:focus {
+.button-liton-liton:hover,
+.button-liton-liton:focus {
     background-color: #31d0aa;
 }
 
