--- a/css/styles.css
+++ b/css/styles.css
@@ -646,6 +646,6 @@ address {
 
 .button-liton-liton:hover,
 .button-liton-liton:focus {
-    background-color: #31d0aa;
+    background-color: #404bbf;;
 }
 
