--- a/css/styles.css
+++ b/css/styles.css
@@ -642,8 +642,9 @@ address {
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);  
 }
 
-.button-liton-liton:hover,
-.button-liton-liton:focus {
-    background-color: #404bbf;;
+.button-button-liton-liton:hover,
+.button-button-liton-liton:focus {
+    background-color: #31d0aa;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
