--- a/css/styles.css
+++ b/css/styles.css
@@ -412,10 +412,10 @@ address {
 }
 
 .workers-button {
-     display: flex;
-     gap: 24px;
-     justify-content: center;
-     align-items: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 24px;
 }
 
 .workers-button-list-icon {
@@ -444,7 +444,10 @@ address {
     align-items: center;
     justify-content: center;
     width: 16px;
-    background-color: #404BBF;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background-color: #4d5ae5;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -645,6 +648,6 @@ address {
 .button-button-liton-liton:hover,
 .button-button-liton-liton:focus {
     background-color: #31d0aa;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+   
 }
 
