--- a/css/styles.css
+++ b/css/styles.css
@@ -631,7 +631,6 @@ address {
 .workers-button-list-icon {
     width: 40px;
     height: 40px;
-    
 }
 
 .button-button-liton-liton {
@@ -640,6 +639,7 @@ address {
     background-color: #4d5ae5;
     border-radius: 50%;
     display: flex;
+    gap: 16px;
     align-items: center;
     justify-content: center;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);  
