--- a/css/styles.css
+++ b/css/styles.css
@@ -434,8 +434,8 @@ address {
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.workers-button-list-icon:hover,
-.workers-button-list-icon:focus {
+.button-liton-litonicon:hover,
+.button-liton-liton:focus {
     background-color: #404bbf; 
 }
 
@@ -631,6 +631,7 @@ address {
 .workers-button-list-icon {
     width: 40px;
     height: 40px;
+    gap: 16px; 
 }
 
 .button-button-liton-liton {
