--- a/css/styles.css
+++ b/css/styles.css
@@ -434,7 +434,7 @@ address {
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.button-liton-litonicon:hover,
+.button-liton-liton:hover,
 .button-liton-liton:focus {
     background-color: #404bbf; 
 }
