--- a/css/styles.css
+++ b/css/styles.css
@@ -431,7 +431,7 @@ address {
     border-radius: 50%;
     align-items: center;
     justify-content: center;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button-liton-liton:hover,
