--- a/css/styles.css
+++ b/css/styles.css
@@ -431,7 +431,7 @@ address {
     border-radius: 50%;
     align-items: center;
     justify-content: center;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button-liton-liton:hover,
@@ -625,13 +625,9 @@ address {
     color: #FFFFFF;
 }
 
-
-
-
 .workers-button-list-icon {
     width: 40px;
     height: 40px;
-    gap: 16px; 
 }
 
 .button-button-liton-liton {
