--- a/css/styles.css
+++ b/css/styles.css
@@ -629,6 +629,9 @@ address {
 .workers-button-list-icon {
     width: 40px;
     height: 40px;
+display: inline-flex;
+align-items: flex-start;
+gap: 16px;
 }
 
 .button-button-liton-liton {
