--- a/css/styles.css
+++ b/css/styles.css
@@ -423,7 +423,7 @@ address {
     flex-direction: row;
     list-style-type: none;
     justify-content: center;
-    gap: 24px;
+gap: 16px;
     background-color: #4D5AE5;
     fill: #4D5AE5;
     width: 40px;
@@ -448,7 +448,7 @@ address {
     height: 100%;
     border-radius: 50%;
     background-color: #4d5ae5;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .workers-button-icon {
