--- a/css/styles.css
+++ b/css/styles.css
@@ -412,10 +412,9 @@ address {
 }
 
 .workers-button {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 24px;
+   display: inline-flex;
+align-items: flex-start;
+gap: 16px;
 }
 
 .workers-button-list-icon {
@@ -423,7 +422,7 @@ address {
     flex-direction: row;
     list-style-type: none;
     justify-content: center;
-gap: 16px;
+    gap: 24px;
     background-color: #4D5AE5;
     fill: #4D5AE5;
     width: 40px;
@@ -555,7 +554,6 @@ gap: 16px;
 .footer-conteinet {
     display: flex;
     align-items: baseline;
-    
 }
   
 .container-footer {
@@ -626,12 +624,15 @@ gap: 16px;
     color: #FFFFFF;
 }
 
-.workers-button-list-icon {
-    width: 40px;
-    height: 40px;
+.workers-button {
 display: inline-flex;
 align-items: flex-start;
 gap: 16px;
+}
+
+.workers-button-list-icon {
+    width: 40px;
+    height: 40px;
 }
 
 .button-button-liton-liton {
@@ -651,4 +652,3 @@ gap: 16px;
     background-color: #31d0aa;
    
 }
-
