--- a/css/styles.css
+++ b/css/styles.css
@@ -417,7 +417,7 @@ align-items: flex-start;
 gap: 16px;
 }
 
-.workers-button-list-icon {
+.workers-button-list-icon-icon {
     display: flex;
     flex-direction: row;
     list-style-type: none;
@@ -626,10 +626,9 @@ gap: 16px;
 
 .workers-button {
     
-    display: flex;
-    
-align-items: flex-start;
-gap: 16px;
+    display: inline-flex;
+    align-items: flex-start;
+    gap: 16px;
 }
 
 .workers-button-list-icon {
