--- a/css/styles.css
+++ b/css/styles.css
@@ -143,7 +143,7 @@ address {
         display: block;
         position:absolute;
         content: "";
-        width: 100px;
+        width: 100%;
         height: 4px;
         bottom: -1px;
         border-radius: 2px;
@@ -200,7 +200,7 @@ address {
 
 .address-list {
     display: flex;
-    gap: 40px                       ;
+    gap: 40px;
 }
 
 .address-made-item {
@@ -355,7 +355,7 @@ address {
     font-weight: 400;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    text-transform: capitalize;
+    
     color: #434455;
 }
 
@@ -478,8 +478,7 @@ gap: 24px;
     flex-wrap: wrap;
     gap: 24px;
     row-gap: 48px;
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08); 
-}
+   }
 
 .portfolio-caption {
     border: 1px solid #e7e9fc;
@@ -551,7 +550,7 @@ gap: 24px;
 
  /*<!--PAGE FOOTER-->*/
 
-.footer-conteinet {
+.footer-conteinet container {
     display: flex;
     align-items: baseline;
 }
